[package]
name = "oggify"
version = "0.1.0"
authors = ["Lorenzo Pistone <blaffablaffa@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Download Spotify tracks to Ogg Vorbis format with a Premium account"
keywords = ["spotify"]
repository = "https://github.com/pisto/oggify"
readme = "README.md"

[dependencies]
tokio-core = "0.1.17"
librespot-core = { git = "https://github.com/librespot-org/librespot.git", rev="89cafd7c86cd62ca0666a9a3d94eeb50fa51a16e" }
librespot-metadata = { git = "https://github.com/librespot-org/librespot.git", rev="89cafd7c86cd62ca0666a9a3d94eeb50fa51a16e" }
librespot-audio = { git = "https://github.com/librespot-org/librespot.git", rev="89cafd7c86cd62ca0666a9a3d94eeb50fa51a16e" }
regex = "1.1.0"
log = "0.4.6"
env_logger = "0.6.0"
scoped_threadpool = "0.1.9"
