[package]
name = "oggify"
version = "0.1.0"
authors = ["Lorenzo Pistone <blaffablaffa@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Download Spotify tracks to Ogg Vorbis format with a Premium account"
keywords = ["spotify"]
repository = "https://github.com/pisto/oggify"
readme = "README.md"

[dependencies]
tokio-core = "0.1.17"
librespot-core = { git = "https://github.com/librespot-org/librespot.git", rev="0adb8516a65f551211a9ce78c2d822b85454546c" }
librespot-metadata = { git = "https://github.com/librespot-org/librespot.git", rev="0adb8516a65f551211a9ce78c2d822b85454546c" }
librespot-audio = { git = "https://github.com/librespot-org/librespot.git", rev="0adb8516a65f551211a9ce78c2d822b85454546c" }
regex = "1.1.0"
log = "0.4.6"
env_logger = "0.6.0"
scoped_threadpool = "0.1.9"
sanitize-filename = "0.3.0"
indexmap = "1.6.1"
